--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Poll Coming Soon</title>
+    <title>XPOLL coming soon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.cdnfonts.com/css/akira-expanded"
+      rel="stylesheet"
+    />
     <style>
       body,
       html {
@@ -23,12 +27,15 @@
       .whitepaper-button {
         position: absolute;
         left: 50%;
-        bottom: 150px;
+        top: 70%;
         transform: translateX(-50%);
         background-color: white;
         color: black;
-        /* font-weight: 600; */
-        padding: 12px 50px;
+        font-family: "Akira Expanded", sans-serif;
+
+        padding: 12px 20px;
+        width: 200px;
+        text-align: center;
         border-radius: 9999px;
         text-decoration: none;
         transition: background 0.3s;
@@ -39,6 +46,7 @@
       }
     </style>
   </head>
+
   <body>
     <div class="bg-container">
       <a
